k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fer-project
  labels:
    name: fer-project
    app: facial-expression-recognition
