k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fer-service
  namespace: fer-project
  labels:
    app: fer-service
spec:
  selector:
    app: fer-service
  ports:
  - name: http
    port: 8000
    targetPort: 8000
    protocol: TCP
  type: ClusterIP
